# TuneTables

./: .gitignore  README.md  pyproject.toml  requirements.txt
metadata/: all_datasets.txt  all_tasks.txt  ext_features.txt  extended_datasets.txt  small_datasets.txt  test_datasets.txt  test_tasks.txt
pt_scripts/: hparams.sh
tabpfn/: PriorFittingCustomPrior.ipynb  data  encoders.py  losses.py  model_configs.py  notebook_utils.py  run_baselines.py  run_command.txt  run_optuna.py  run_optuna_n.py  train.py  train_loop.py  transformer.py  utils.py
tabpfn/batch/: all_tasks.py  run_gcp_expt.sh  run_tabpfn_job.py  task_test.sh  utils.sh
tabpfn/datasets/: __init__.py  utils.py
tabpfn/metadata/: all_datasets.txt  all_tasks.txt  ens_reseed.txt  large_classnum_ds.txt  npad_tasks.txt  npp_datasets.txt  npp_tasks.txt  powerall_datasets.txt  powerall_tasks.txt  rem_datasets.txt  small_datasets.txt  subset_datasets.txt  subset_tasks.txt  test_datasets.txt  test_tasks.txt  weak_datasets.txt  zs_datasets.txt  zs_tasks.txt
tabpfn/priors/: fast_gp.py  garage.py  real.py
tabpfn/pt_scripts/: hparams.sh
tabpfn/scripts/: differentiable_pfn_evaluation.py  model_builder.py  param_grid.py  tabular_baselines.py  tabular_evaluation.py  transformer_prediction_interface.py
tunetables/: __init__.py  decoders.py  encoders.py  layer.py  losses.py  model_configs.py  run_baselines.py  run_optuna.py  train.py  train_loop.py  transformer.py  utils.py
tunetables/batch/: all_tasks.py  run_gcp_expt.sh  run_tt_job.py  task_test.sh  utils.sh
tunetables/priors/: __init__.py  differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior_bag.py  real.py  utils.py
tunetables/scripts/: __init__.py  differentiable_pfn_evaluation.py  model_builder.py  model_configs.py  param_grid.py  tabular_baselines.py  tabular_evaluation.py  transformer_prediction_interface.py
tunetables/tests/: test_deterministic_and_model_caching.py  test_load_module_only_inference.py  test_standardization.py  test_tunetables_classifier.py
